tera/src/snapshot_tests/snapshots/tera__snapshot_tests__parser__parser_errors@component_body_rest_reserved.txt.snap
---
source: tera/src/snapshot_tests/parser.rs
expression: res.unwrap_err()
input_file: tera/src/snapshot_tests/parser_inputs/errors/component_body_rest_reserved.txt
---
error: The name `body` is reserved for component body content.
 --> component_body_rest_reserved.txt:1:23
  |
1 | {% component panel(...body) %}{% endcomponent %}
  |                       ^^^^
